[gd_scene load_steps=3 format=3 uid="uid://dwjnnd0rs3ap2"]

[ext_resource type="Script" path="res://Scripts/nivel_1.gd" id="1_4072e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xdu4d"]
bg_color = Color(0.14902, 0.831373, 0.12549, 1)

[node name="nivel_1" type="Node2D"]
script = ExtResource("1_4072e")

[node name="fondo" type="Label" parent="."]
offset_top = -2.0
offset_right = 430.0
offset_bottom = 929.0
theme_override_styles/normal = SubResource("StyleBoxFlat_xdu4d")

[node name="btnpregunta_1" type="Button" parent="."]
offset_left = 35.0
offset_top = 284.0
offset_right = 185.0
offset_bottom = 314.0
text = "Pregunta"

[node name="btnpregunta_2" type="Button" parent="."]
offset_left = 254.0
offset_top = 284.0
offset_right = 404.0
offset_bottom = 314.0
text = "Pregunta"

[node name="btnmanualidad_1" type="Button" parent="."]
offset_left = 38.0
offset_top = 355.0
offset_right = 188.0
offset_bottom = 385.0
text = "Manualidad"

[node name="btnmanualidad_2" type="Button" parent="."]
offset_left = 254.0
offset_top = 360.0
offset_right = 404.0
offset_bottom = 390.0
text = "Manualidad"

[node name="btnactividad_1" type="Button" parent="."]
offset_left = 39.0
offset_top = 439.0
offset_right = 189.0
offset_bottom = 469.0
text = "Actividad"

[node name="btnactividad_2" type="Button" parent="."]
offset_left = 256.0
offset_top = 442.0
offset_right = 406.0
offset_bottom = 472.0
text = "Actividad"

[node name="btnsalir" type="Button" parent="."]
offset_left = 137.0
offset_top = 544.0
offset_right = 287.0
offset_bottom = 575.0
text = "Salir"

[node name="panel_datos" type="TextEdit" parent="."]
offset_left = 91.0
offset_top = 84.0
offset_right = 373.0
offset_bottom = 149.0

[connection signal="pressed" from="btnactividad_1" to="." method="_on_btnactividad_1_pressed"]
[connection signal="pressed" from="btnactividad_2" to="." method="_on_btnactividad_2_pressed"]
[connection signal="pressed" from="btnsalir" to="." method="_on_btnsalir_pressed"]
